# baebot-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  Settings.toml
assets/: like.aac
baebot_discord/: Cargo.toml  appsettings.json
baebot_discord/src/: main.rs  settings.rs
baebot_discord/src/commands/: mod.rs  music.rs
baebot_discord/src/connectors/: common.rs  mod.rs
baebot_models/: Cargo.toml
baebot_models/src/: discord.rs  lib.rs
config/: Settings.toml
k8s/: 00-namespace.yml  10-configmap.yml  20-deployment.yml
src/: main.rs  settings.rs
src/connectors/: base.rs  danbooru.rs  gelbooru.rs  mod.rs  rule34.rs
src/discord/: coom.rs  general.rs  mod.rs
