[package]
name = "baebot_discord"
version = "0.1.0"
authors = ["Jacob Schreiner <jmschriner2@gmail.com>"]
edition = "2018"
include = ["./*.json", "src/**/*.rs"]

[dependencies]
config="0.9"
baebot_models = { path = "../baebot_models" }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend"
]
version = "0.6"